# bachelor2

./: .gitignore  Cargo.toml  TODO.md  max  output.rs  testing.parquet  testing_output.parquet  upload.sh
src/: aggregation.rs  benchmark.rs  bloom_filter.rs  main.rs  metadata.rs  more_row_groups.rs  parse.rs  query.rs  row_filter.rs  row_group_filter.rs  test.rs  testing.rs  utils.rs
src/metadata/: increase_row_groups.rs  merge.rs  metadata.rs  selectivity.rs
src/parse/: aggregation.rs  expression.rs  mod.rs
src/read/: buf_reader.rs  direct.rs  mem_map.rs  mem_map2.rs  parquet.rs  parquet2.rs  parquet2_2.rs  read.rs  seq_read.rs  seqparquet2.rs  seqread2.rs  seqread3.rs  version2.rs  version3.rs  wrapper.rs
