[package]
name = "row-group-skipper"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "54.0.0"
futures = "0.3.31"
parquet = { version = "54.0.0", features = ["async"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "more-rgs"
path = "src/more_row_groups.rs"

[[bin]]
name = "parse"
path = "src/parse.rs"
