[package]
name = "row-group-skipper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
arrow = { version = "54.0.0", features = ["prettyprint"] }
arrow2 = { version = "0.18.0", features = ["compute_boolean", "compute_cast", "compute_comparison", "compute_concatenate", "compute_filter", "io_parquet", "io_print", "serde_types"] }
# arrow2 = { path = "/Users/linusweigand/Downloads/arrow2", features = ["io_parquet", "serde_types", "io_parquet_async", "io_print", "compute_concatenate"] }
# parquet2 = { path = "/Users/linusweigand/Downloads/parquet2", features = ["serde_types"]}
async-stream = "0.3.6"
bincode = "1.3.3"
bytes = "1.10.0"
chrono = "0.4.39"
futures = "0.3.31"
memmap2 = "0.9.5"
parquet = { version = "54.0.0", features = ["async"] }
parquet2 = { version = "0.17.2", features = ["serde_types"] }
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat", "io-util"] }

# [profile.release]
# debug = true

# [[bin]]
# name = "main"
# path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "merge"
path = "src/metadata/merge.rs"
#
# [[bin]]
# name = "selectivity"
# path = "src/metadata/selectivity.rs"
#
# [[bin]]
# name = "metadata"
# path = "src/metadata/metadata.rs"
#
# [[bin]]
# name = "increase"
# path = "src/metadata/increase_row_groups.rs"

[[bin]]
name = "testing"
path = "src/testing.rs"

# [[bin]]
# name = "read"
# path = "src/read/read.rs"
#
# [[bin]]
# name = "seqread"
# path = "src/read/seq_read.rs"
#
# [[bin]]
# name = "wrapper"
# path = "src/read/wrapper.rs"
#
# [[bin]]
# name = "memmap"
# path = "src/read/mem_map.rs"
#
# [[bin]]
# name = "version2"
# path = "src/read/version2.rs"
#
# [[bin]]
# name = "version3"
# path = "src/read/version3.rs"
#
# [[bin]]
# name = "parquet2"
# path = "src/read/parquet2.rs"
#
# [[bin]]
# name = "seqread2"
# path = "src/read/seqread2.rs"

# [[bin]]
# name = "seqread3"
# path = "src/read/seqread3.rs"

# [[bin]]
# name = "bufreader"
# path = "src/read/buf_reader.rs"
#
# [[bin]]
# name = "memmap2"
# path = "src/read/mem_map2.rs"
#
# [[bin]]
# name = "direct"
# path = "src/read/direct.rs"
#
# [[bin]]
# name = "parquet"
# path = "src/read/parquet.rs"
